gcc/testsuite/rust/rustc/ui/half-open-range-patterns/half-open-range-pats-bad-types.rs
fn main() {
    let "a".. = "a"; // { dg-error ".E0029." "" { target *-*-* } }
    let .."a" = "a"; // { dg-error ".E0029." "" { target *-*-* } }
    let ..="a" = "a"; // { dg-error ".E0029." "" { target *-*-* } }
}

